# rust_virtual_kvm

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  shell.nix
_src/: lib.rs  net.rs  state.rs  temp.rs
client/: Cargo.toml
client/src/: config.rs  connection.rs  main.rs  state.rs
client/src/listeners/: input_event.rs  mod.rs  special_event.rs
common/: Cargo.toml
common/src/: crypto.rs  dev.rs  event.rs  lib.rs  net.rs  tcp.rs  tcp2.rs  transport.rs  udp.rs  udp2.rs
crates/client/: Cargo.toml
crates/client/src/: client_loop.rs  connection.rs
crates/client/src/listeners/: input_event.rs  special_event.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: chacha.rs  lib.rs
crates/input-event/: Cargo.toml
crates/input-event/src/: lib.rs
crates/input-event/src/mapper/: error.rs  mod.rs
crates/input-event/src/mapper/x11/: evdev.rs  mod.rs  xtest.rs
crates/input-listener/: Cargo.toml
crates/input-listener/src/: lib.rs
crates/input-listener/src/x11/: dev.rs
crates/input-simulator/: Cargo.toml
crates/input-simulator/src/: lib.rs
crates/input-simulator/src/x11/: dev.rs  mod.rs  xtest.rs
crates/network/: Cargo.toml
crates/network/src/: input_event.rs  lib.rs  tcp.rs  transport.rs  udp.rs
crates/server/: Cargo.toml
crates/server/src/: client.rs  config.rs  dev.rs  input_event_transport.rs  keyboard_state.rs  lib.rs  processor.rs  server.rs  server_loop.rs  server_message.rs
crates/server/src/actors/: mod.rs
crates/server/src/actors/client/: actor.rs  mod.rs  resource.rs
crates/server/src/actors/device/: actor.rs  mod.rs  resource.rs
crates/server/src/actors/server/: actor.rs  resource.rs
crates/server/src/actors/state/: actor.rs  client.rs  resource.rs
crates/server/src/handlers/: client.rs  client_message_sender.rs
crates/server/src/state/: error.rs  handler.rs  state.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
server/: Cargo.toml
server/src/: client.rs  config.rs  dev.rs  input_event_transport.rs  keyboard_state.rs  main.rs  processor.rs  server.rs  state.rs
server/src/handlers/: client.rs  client_message_sender.rs  mod.rs  monitor.rs
server/src/state/: handler.rs  state.rs
src/: dev.rs  lib.rs  main.rs  net.rs  temp.rs
src/client/: client_loop.rs  connection.rs  mod.rs
src/client/listeners/: input_event.rs  special_event.rs
src/common/: crypto.rs  dev.rs  error.rs  mod.rs  net.rs  tcp.rs  transport.rs  udp.rs  udp2.rs
src/server/: client.rs  config.rs  dev.rs  input_event_transport.rs  mod.rs  processor.rs  server.rs  server_loop.rs
src/server/handlers/: client.rs  client_message_sender.rs  mod.rs
src/server/state/: error.rs  handler.rs  mod.rs  state.rs
src/ui/: ui.rs
tests/: test_connection.rs
