[package]
name = "rust_virtual_kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/client",
    "crates/crypto",
    "crates/input-listener",
    "crates/input-simulator",
    "crates/network",
    "crates/server",
    "crates/ui",
]

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["serde"] }
evdev = { version = "0.12.2", features = ["serde", "tokio"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
futures = "0.3.31"
uuid = { version = "1.15.0", features = ["v4"] }
thiserror = "2"

server = { path = "crates/server" }
client = { path = "crates/client" }
ui = { path = "crates/ui" }
