[package]
name = "rust_virtual_kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/client",
    "crates/crypto",
    "crates/input-listener",
    "crates/input-simulator",
    "crates/network",
    "crates/server",
    "crates/ui",
]

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }

server = { path = "crates/server" }
client = { path = "crates/client" }
ui = { path = "crates/ui" }
