[package]
name = "rust_virtual_kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/client",
    "crates/crypto",
    "crates/input-event",
    "crates/input-listener",
    "crates/input-simulator",
    "crates/network",
    "crates/server",
    "crates/ui",
]

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"

server = { path = "crates/server" }
client = { path = "crates/client" }
ui = { path = "crates/ui" }

[build-dependencies]
pkg-config = "0.3"
