[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = { path = "../common" }
client = { path = "../client" }
bincode = "1.3.3"
evdev = { version = "0.12.2", features = ["serde", "tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
serde = { version = "1.0.214", features = ["derive"] }
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["serde"] }
uuid = { version = "1.15.0", features = ["v4"] }
