[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["serde"] }
evdev = { version = "0.12.2", features = ["serde", "tokio"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2"

crypto = { path = "../crypto" }
