[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["serde"] }
evdev = { version = "0.12.2", features = ["serde", "tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
futures = "0.3.31"
uuid = { version = "1.15.0", features = ["v4"] }
thiserror = "2"

crypto = { path = "../crypto" }
network = { path = "../network" }
input-event = { path = "../input-event" }
input-listener = { path = "../input-listener" }
input-simulator = { path = "../input-simulator" }
